--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made By Swapnil Shinde</p>
+    <p>Website created by Swapnil Shinde</p>
   </div>
 </div>
 </body>
