--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,19 +1,14 @@
+
 <%- include("partials/header"); -%>
-<h1>Compose</h1>
-
-<form action="/compose" method="post">
-    <div class="form-group">
-        <label for="postTitle">Title</label>
-        <input class="form-control" type="text" name="postTitle" >
-    </div>
-    <div class="form-group">
-        <label for="postContent">Post</label>
-        <textarea class="form-control" name="postContent" id="postContent" cols="30" rows="5"></textarea>
-    </div>
-
-    <button class="btn btn-primary" type="submit" name="button">Publish</button>
-
-
-</form>
+    <h1>Compose</h1>
+    <form class="" action="/compose" method="post">
+      <div class="form-group">
+        <label>Title</label>
+        <input class="form-control" type="text" name="postTitle">
+        <label>Post</label>
+        <textarea class="form-control" name="postBody" rows="5" cols="30"></textarea>
+      </div>
+      <button class="btn btn-primary" type="submit" name="button">Publish</button>
+    </form>
 
 <%- include("partials/footer"); -%>
