--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
     <% }) %>
 
     <div class="floating-container">
-      <a href="" class="floating-button">Compose Blog</a>
+      <a href="/compose" class="floating-button">Compose Blog</a>
     </div>
 
     <script>
