--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,25 +34,31 @@
   color: #fff;
 }
 
-.floating-container {
-    text-align: center;
-    margin-top: 100px;
-    position: relative;
-  }
-  
-  .floating-button {
-    display: inline-block;
-    background-color: #007bff;
-    color: #fff;
-    border-radius: 50%;
-    padding: 15px 20px;
-    text-decoration: none;
-    font-weight: bold;
-    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-  }
+.container {
+  text-align: center;
+  margin-top: 100px;
+  position: relative;
+}
+
+.floating-button {
+  display: inline-block;
+  background-color: #007bff;
+  color: #fff;
+  border-radius: 50%;
+  padding: 15px 20px;
+  text-decoration: none;
+  font-weight: bold;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
+  position: fixed;
+  bottom: calc(3cm + 20px);
+  right: 20px;
+  z-index: 9999; /* Adjust this value as needed */
+}
+
+.floating-button:hover {
+  background-color: #0056b3;
+}
+
   
   .floating-button:hover {
     background-color: #0056b3;
